--- a/INF8808/package.json
+++ b/INF8808/package.json
@@ -1,5 +1,10 @@
 {
   "name": "inf8808",
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -18,7 +23,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "csv-parse": "^5.5.5",
+    "csv-reader": "^1.0.12",
     "d3": "^7.9.0",
+    "ngx-papaparse": "^8.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
