--- a/INF8808/package.json
+++ b/INF8808/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "csv-parse": "^5.5.5",
     "d3": "^7.9.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
